<resources>
    <string name="app_name">NUMADSu-AlanGrinberg</string>
    <string name="about">About Me</string>
    <string name="contactInfo">Name: Alan Grinberg, Email: grinberg.a@northeastern.edu</string>
    <string name="upcoming">More on the way soon!</string>
    <string name="clicky">Clicky Clicky</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="pressed">"Pressed: "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressA">Pressed: A</string>
    <string name="pressB">Pressed: B</string>
    <string name="pressC">Pressed: C</string>
    <string name="pressD">Pressed: D</string>
    <string name="pressE">Pressed: E</string>
    <string name="pressF">Pressed: F</string>
    <string name="hello_world">Hello World</string>
    <string name="link_collector">Link Collector</string>
    <string name="name">Name</string>
    <string name="link">link</string>
    <string name="link_starter">https://</string>
    <string name="locator">Locator</string>
    <string name="accept">Accept</string>
    <string name="text_location_permission">Allow location permissions to get your current location and coordinates</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="WebService">Web Service</string>
    <string name="submit">Submit</string>
    <string name="yourResult">\"Your result is: \"</string>
    <string name="result">Result:</string>
    <string-array name="link_array">
        <item>Link1</item>
        <item>Link2</item>
        <item>Link3</item>
    </string-array>
</resources>
